# pii-presidio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.ipynb  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: 01_basic_round_trip.py  02_persisted_mapping.py  03_llm_workflow.py  04_advanced_recognizers.py  05_custom_detector.py  06_batch_processing.py  07_audit_mode.py  08_multilingual.py  09_rag_pipeline.py  10_agent_tool_calls.py  11_dataframe_round_trip.py  12_dsar_redaction.py  13_polish_kyc_document.py  README.md
scripts/: build_demo.py
src/pii_presidio/: __init__.py  operator.py  recognizers.py
tests/: test_integration.py  test_operator.py  test_public_api.py  test_recognizers.py
