[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pii-presidio"
version = "0.1.0"
description = "Microsoft Presidio plugin: multi-language recognizers with optional reversible anonymization."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Michal Piotrowski", email = "piotrowskimichalwfis@gmail.com" },
]
keywords = [
    "presidio",
    "presidio-plugin",
    "pii",
    "anonymization",
    "privacy",
    "gdpr",
    "reversible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "pii-core>=0.1,<0.2",
    "pii-veil>=0.1,<0.2",
    "presidio-analyzer>=2.2,<3",
    "presidio-anonymizer>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/pii-toolkit/pii-presidio"
Repository = "https://github.com/pii-toolkit/pii-presidio"
Issues = "https://github.com/pii-toolkit/pii-presidio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_presidio"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pii_presidio",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["pii_presidio"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["presidio_analyzer.*", "presidio_anonymizer.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=pii_presidio",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "-ra",
]

[tool.coverage.run]
source = ["src/pii_presidio"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
